# dioxus_backend

./: .env.example  Cargo.toml  MEJORAS_BACKEND_V2.md  OBSERVACIONES.md  README.md  README_ARQUITECTURA_ANALISIS.md  RESUMEN_CAMBIOS_BACKEND.md  TODO_BACKEND_COBERTURA_BD_V2.md  add_fecha_eliminacion.sql  check_table_structure.sql  debug_database.sql
.cargo/: config.toml
bruno_collection_correct/: BRUNO_README.md  bruno.json  collection.bru
bruno_collection_correct/Actividades/: Create Actividad.bru  Delete Actividad.bru  Get Actividad by ID.bru  List Actividades by Curso.bru  Listar Actividades.bru  Update Actividad.bru
bruno_collection_correct/Areas/: Change Area Status.bru  Create Area.bru  Delete Area.bru  Get Area by ID.bru  List Areas Activas.bru  List Areas.bru  Update Area.bru
bruno_collection_correct/Auth/: Ejemplo Variables Separadas.bru  Health Check (lowercase).bru  Login User.bru  OAuth2 Token.bru  Readiness_Check.bru  Register User.bru  Validate Token.bru
bruno_collection_correct/Cursos/: Create Curso.bru  Delete Curso.bru  Get Aula by Curso.bru  Get Curso by ID.bru  Get Cursos by Area.bru  Get Cursos by Plantilla.bru  List Cursos.bru  Update Curso.bru
bruno_collection_correct/Examenes/: Create Examen.bru  Delete Examen.bru  Get Examen by ID.bru  List Examenes por Curso.bru  Update Examen.bru
bruno_collection_correct/Matriculas/: Desmatricular Estudiante.bru  Get Matriculas by Curso.bru  Get Matriculas by Estudiante.bru  Matricular Estudiante.bru
bruno_collection_correct/Metricas/: Get Memory Metrics.bru  Optimize Memory.bru
bruno_collection_correct/Modulos/: Create Modulo.bru  Delete Modulo.bru  Get Modulo by ID.bru  List Modulos by Curso.bru  Update Modulo.bru
bruno_collection_correct/Notificaciones/: Create Notificacion.bru  Get Notificaciones by Usuario.bru  Marcar Notificacion Leida.bru  Marcar Todas Leidas.bru
bruno_collection_correct/Roles/: Create Role.bru  Delete Role.bru  Get Role by ID.bru  List Roles.bru  Update Role.bru
bruno_collection_correct/Users/: Create User.bru  Get Current User.bru  List Users.bru  List_Users.bru  Login User Alternative.bru  Logout User.bru  Update User.bru
bruno_collection_correct/Usuarios/: Get User by ID.bru  Login User.bru  Logout User.bru
src/: main.rs
src/config/: mod.rs
src/database/: connectdb.rs  db_executor.rs  ddl_postgresql_aula.sql  ddl_postgresql_aula_v2.sql  migrator.rs  mod.rs  seed_users.rs  seeder.rs
src/entities/: mod.rs  rol.rs
src/handlers/: actividad.rs  area_conocimiento.rs  auth.rs  contenido_unidad.rs  curso.rs  examen.rs  health.rs  matricula.rs  metrics.rs  mod.rs  modulo.rs  notificacion.rs  portafolio.rs  posts.rs  roles.rs  socket_manager.rs  storage.rs  tema.rs  unidad.rs  users.rs  usuarios.rs
src/middleware/: auth.rs  compress.rs  memory.rs  mod.rs
src/models/: actividad.rs  actividad_entrega.rs  area_conocimiento.rs  calificacion.rs  contenido_plantilla.rs  contenido_transversal.rs  contenido_unidad.rs  curso.rs  entrega.rs  evaluacion_calificacion.rs  evaluacion_sesion.rs  evento_programado.rs  examen.rs  historial_curso_actividad.rs  historial_curso_estudiante.rs  mod.rs  modulo.rs  modulo_archivo.rs  notificacion.rs  personalizacion_examen.rs  personalizacion_modulo.rs  personalizacion_portafolio.rs  plantilla_curso.rs  portafolio.rs  portafolio_contenido.rs  pregunta_examen.rs  profesor_curso.rs  rol.rs  socket.rs  tema.rs  unidad.rs  usuario.rs  webinar.rs  webinar_modulo.rs  webinar_progreso_estudiante.rs
src/routes/: actividad.rs  area_conocimiento.rs  contenido_unidad.rs  curso.rs  examen.rs  matricula.rs  mod.rs  modulo.rs  notificacion.rs  portafolio.rs  roles.rs  storage.rs  tema.rs  unidad.rs  usuarios.rs
src/services/: actividad_service.rs  area_conocimiento_service.rs  calificacion_service.rs  contenido_plantilla_service.rs  contenido_unidad_service.rs  (+29 more)
(+3 files in other folders)
