[package]
name = "rust-api-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# ORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLx with PostgreSQL) - Versión compatible con SeaORM 1.1
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# UUID and time handling
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cron jobs
tokio-cron-scheduler = "0.9"

# WebSockets (axum ya incluye ws features arriba)

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Password hashing
bcrypt = "0.15"

# JWT tokens
jsonwebtoken = "9.0"

# OpenAPI/Swagger documentation (manual para personalización)
utoipa = { version = "4.0", features = ["axum_extras"] }
swagger-ui = "0.1"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"  # Reduce binary size
codegen-units = 256
lto = false
incremental = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"  # Reduce binary size
codegen-units = 1
lto = true
strip = true  # Remove debug symbols
