[package]
name = "api-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.6", features = ["ws", "multipart"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# AWS SDK for S3/R2
aws-sdk-s3 = { version = "1.42", features = ["behavior-version-latest"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-smithy-runtime = "1.6"

# ORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLx with PostgreSQL) - Versión compatible con SeaORM 1.1
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# UUID and time handling
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# WebSockets (axum ya incluye ws features arriba)

# Cron jobs (para tareas programadas)
tokio-cron-scheduler = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Password hashing
bcrypt = "0.15"

# JWT tokens
jsonwebtoken = "9.0"

# OpenAPI/Swagger documentation (manual para personalización)
utoipa = "4.0"

# Testing
once_cell = "1.19.0"
 
[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.dev]
opt-level = 3
debug = 1
panic = "abort"
codegen-units = 256
lto = false
incremental = false

[profile.release]
opt-level = 3
debug = false
panic = "abort"  # Reduce binary size
codegen-units = 1
lto = true
strip = true  # Remove debug symbols